removed all usages of times(1), (#43)
removed most copy-pasted literals